@@ -401,7 +401,7 @@ input_line_changed(void)
 			}
 			else
 			{
-				(void)search_menu_list("", sub_mode_ptr);
+				(void)search_menu_list("", sub_mode_ptr, 0);
 			}
 		}
 		free(previous);
@@ -442,7 +442,7 @@ input_line_changed(void)
 				}
 			case CLS_MENU_FSEARCH:
 			case CLS_MENU_BSEARCH:
-				(void)search_menu_list(mbinput, sub_mode_ptr);
+				(void)search_menu_list(mbinput, sub_mode_ptr, 0);
 				break;
 			case CLS_FILTER:
 				set_local_filter(mbinput);
@@ -1247,7 +1247,7 @@ cmd_return(key_info_t key_info, keys_info_t *keys_info)
 			case CLS_MENU_FSEARCH:
 			case CLS_MENU_BSEARCH:
 				curr_stats.need_update = UT_FULL;
-				curr_stats.save_msg = search_menu_list(pattern, sub_mode_ptr);
+				curr_stats.save_msg = search_menu_list(pattern, sub_mode_ptr, 1);
 				break;
 
 			default:
